--- a/style.css
+++ b/style.css
@@ -8,11 +8,119 @@ body{
     width: 100vw;
 }
 .container{
-    height: 100%;
-    max-width: 95vw;
+    /* height: 70%; */
+    max-width: 66vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     padding: 2rem 1rem;
     margin: 0 auto;
     /* background-color: aqua; */
 
 }
+a{
+    text-decoration: none;
+}
+.header-container{
+    margin-bottom: 2.8rem;
+}
+.header-title{
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+}
+.header-desc{
+    max-width: 568px;
+    text-align: center;
+    margin: 0 auto;
+    color: rgb(77, 74, 74);
+}
+.card-container{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(83, 82, 82);
+    overflow: hidden;
+    border-radius: 2px;
+    height: 20rem;
+    width: 18rem;
+}
+.card-img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    height: 12rem;
+}
+.card-img{
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.card-title-container{
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+}
+.card:hover .card-img{
+    transform: scale(1.02);
+    transition-duration: 200ms;
+}
+.card-title{
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    margin-bottom: 0.4rem;
+    color: rgb(39, 34, 34);
+}
 
+.card-title:hover{
+    color: rgb(62, 62, 201);
+}
+.card-desc{
+    font-size: 1rem;
+}
+.card-footer-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1rem;
+}
+.author-container{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    gap: 1rem;
+}
+
+.author-avtar{
+    height: 2rem;
+    width: 2rem;
+    overflow: hidden;
+    /* margin-bottom: 1rem; */
+    border: 1px solid rgb(104, 101, 101);
+    border-radius: 50%;
+    background-color: #e9e9e9;
+}
+.author-name{
+    color: rgb(44, 41, 41);
+}
+.author-date{
+    color: rgb(97, 92, 92);
+}
+.tag-container{
+    border: 1px solid rgb(51, 50, 50);
+    padding: 4px;
+    border-radius: 2px;
+    color: gray;
+}
