--- a/style.css
+++ b/style.css
@@ -124,3 +124,27 @@ a{
     border-radius: 2px;
     color: gray;
 }
+
+@media (min-width: 400px) {
+    .card-container{
+        grid-template-columns: repeat(1, 1fr);
+    }    
+}
+
+@media (min-width: 800px) {
+    .card-container{
+        grid-template-columns: repeat(2, 1fr);
+    }    
+}
+
+@media (min-width: 900px) {
+    .card-container{
+        grid-template-columns: repeat(3, 1fr);
+    }    
+}
+
+@media (min-width: 1100px) {
+    .card-container{
+        grid-template-columns: repeat(4, 1fr);
+    }    
+}
